<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:divider="@drawable/separator"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mainInformation"
            style="@style/MyTextStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal"
            android:text="@string/my_name"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.234"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.042" />

        <Button
            android:id="@+id/firstLabButton"
            style="@style/MyButtonTextStyle"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="6dp"
            android:layout_marginTop="6dp"
            android:enabled="true"
            android:text="@string/firstLab"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainInformation" />

        <Button
            android:id="@+id/secondLabOpenButton"
            style="@style/MyButtonTextStyle"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="6dp"
            android:layout_marginTop="6dp"
            android:enabled="true"
            android:text="@string/secondLab"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainInformation" />

        <Button
            android:id="@+id/thirdLabOpenButton"
            style="@style/MyButtonTextStyle"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="6dp"
            android:layout_marginTop="6dp"
            android:enabled="true"
            android:text="@string/thirdLab"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainInformation" />

        <Button
            android:id="@+id/forthLabOpenButton"
            style="@style/MyButtonTextStyle"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="6dp"
            android:layout_marginTop="6dp"
            android:enabled="true"
            android:text="@string/forthLab"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainInformation" />

        <Button
            android:id="@+id/fifthLabOpenButton"
            style="@style/MyButtonTextStyle"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="6dp"
            android:layout_marginTop="6dp"
            android:enabled="true"
            android:text="@string/fifthLab"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainInformation" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>